entered a collection, updated support, removed 3660 pr license (unsupported since 2017)

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________       
+11:32 AM 8/27/2019	PR	Removed client 3660 license, they migrated away in 2017.
 11:39 08/19/2019	CO	5.74187  
 11:38 08/19/2019	CO	5.74186   
 11:33 08/19/2019	CO	5.74185    
