--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,7 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________            
+12:23 PM 10/28/2019	UB	Fixed a misspelling that caused the Past Due and Turn Off List to not be selectable
+8:51 AM 10/28/2019	CO	2nd user license added for client 3610
 4:56 PM 10/23/2019	PR	Fixed potential 4272 error when printing report in Payroll Check History
 16:03 10/19/2019	CO	5.74211  
 3:51 PM 10/23/2019	GL	Prior Period Adjustments - fixed a bug where continuing with blank values would exit the program without printing totals, but cancel to get out would print the totals (totals are always printed now) 
