--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________      
+4:44 PM 11/19/2019	CO	Added a facebook button to the main menu
 11:07 11/19/2019	CO	5.74218  
 11:04 AM 11/15/2019	GL	Fixed issue causing selection of Period to Print to fail to set to past period 
 14:03 11/19/2019	CO	5.74217   
