--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                       
+1:31 PM 12/30/2019	CO	Fixed a bug that caused people with UB-EFT to get an error in Select Company
 13:42 12/19/2019	CO	5.74237  
 1:40 PM 12/27/2019	UB	Customer - change account number got an error 4272 - fixed 
 12:40 12/19/2019	CO	5.74236   
