--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                           
+9:36 AM 2/19/2020	UB	correct bug in billing journal
 10:28 AM 2/19/2020	UB	Deposit List - no longer prints lines for people with 0 deposited.
 9:48 AM 2/19/2020	UB	Collections - fixed Receipt text not showing in receipt number column - now you can see which are CAsh again.
 11:45 02/20/2020	CO	5.74273  
