import for neptune ready.  basic.  water readings only so far.  and acct no, of course.

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                   
+3:57 PM 4/7/2020	UB	Import from Hand Held to Book for Neptune meters is ready for Water Readings
 11:48 AM 4/1/2020	UB	fixed hand held create issue
 11:44 04/20/2020	CO	5.74281  
 14:30 03/20/2020	CO	5.74280   
