more details in Check State Calculation.br.brs

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                         
+5:08 PM 6/2/2020	PR	Added more details into Check State Calculation for PR
 14:59 05/20/2020	CO	5.75004  
 13:53 05/20/2020	CO	5.75003   
 13:39 05/20/2020	CO	5.75002    
