--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                             
+7:53 PM 6/5/2020	CO	fixed a bug that caused [Unique_Computer_ID] to appear in some temporary filenames instead of being properly translated
 19:25 06/20/2020	CO	5.75010  
 14:07 06/20/2020	CO	5.75009   
 2:01 PM 6/5/2020	CO	Fixed glitch from 5.75 - some buttons not respected  
