--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,7 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
-______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                               
+______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________
+3:33 PM 6/8/2020	PR	Fixed: State Tax Add On was not being respected.
+3:31 PM 6/8/2020	PR	Fixed: a OR state payroll tax bracket for people single, less than 3 allowances, making more than 50k annually were being underbilled state taxes
 10:19 06/20/2020	CO	5.75012  
 20:22 06/20/2020	CO	5.75011   
 7:53 PM 6/5/2020	CO	fixed a bug that caused [Unique_Computer_ID] to appear in some temporary filenames instead of being properly translated  
