pr fix state tax add on adding twice

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________           
+3:24 PM 7/2/2020	PR	Fixed recent bug causing state tax addon tax to apply twice.
 1:57 PM 6/26/2020	UB	labels program library error fixed
 13:42 06/20/2020	CO	5.75023  
 13:23 06/20/2020	CO	5.75022   
