--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                 
+11:58 AM 7/31/2020	UB	Recalculate All Current Bills - fixed a bug that prevented this program from functioning
 17:40 07/20/2020	CO	5.75045  
 5:37 PM 7/29/2020	GL	Fixed an issue with Balance Sheet indexes not updating 
 14:24 07/20/2020	CO	5.75044   
