--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                    
+1:58 PM 8/16/2020	UB	Reverse Billing Cycle - Fixed an issue that caused internal looping and failure to revese an individual's billing cycle
 12:47 08/20/2020	CO	5.75048  
 12:46 PM 8/14/2020	UB	Deposit Change List - added customer name, well, at least the first 16 characters of it. 
 11:03 08/20/2020	CO	5.75047   
