--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
-______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________        
+______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________   
+9:56 AM 10/6/2020	UB	Fixed bug -meter number now printing in Meter Reading Book      
 16:19 10/20/2020	CO	5.75063  
 3:49 PM 10/5/2020	UB	Fixed bug - Reminder setting was printing dups on Past Due Notices List for client 465. recompiles                                            
 8:16 10/20/2020	CO	5.75062   
